# ERP_plugin_assistant_web_application

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  tsconfig.json
.cursor/rules/: erp-integration-architecture.mdc  git-conventions.mdc  project-context.mdc  security-gitignore.mdc  typescript-react.mdc
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_drop_product_presets.py
backend/app/: auth.py  config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  base.py  preset.py  quotation.py  team.py  user.py
backend/app/routers/: admin.py  auth.py  erp.py  migrate.py  presets.py  quotations.py
backend/app/schemas/: auth.py  quotation.py
backend/app/services/: quotation_mapper.py
backend/ly_erp/: __init__.py  client.py  config.py
public/templates/: quotation-template.xlsx
scripts/: ly_erp_probe.py  prepare-quotation-template.mjs  seed_admin.py
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: CustomerPresetManager.tsx  DraftList.tsx  ErpProductSearch.tsx  ProductAutocomplete.tsx  ProductPresetManager.tsx  QuotationHistory.tsx  QuotationPrint.tsx
src/contexts/: AuthContext.tsx
src/pages/: AdminPage.tsx  LoginPage.tsx
src/types/: admin.ts  auth.ts  xlsx-column-width.d.ts  xlsx-populate.d.ts
src/utils/: adminApi.ts  api.ts  authHelpers.ts  currency.ts  erpProducts.ts  excel.ts  presets.ts  quotationApi.ts  quotationTotals.ts  xlsxColumnWidth.mjs
