[project]
name = "erp-assistant-backend"
version = "0.1.0"
description = "凌越 ERP SOAP 代理 API（品項快選搜尋）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ly_erp", "app"]
